Imported gnocl-0.9.95-20-07-11.tar.bz2.
2011-07-20
	gnocl::text
		added support for pango formatted markup strings
2011-07-03
	gnocl::entry
   		cget -data now works properly

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+2011-07-20
+	gnocl::text
+		added support for pango formatted markup strings
+
+2011-07-03
+	gnocl::entry
+   		cget -data now works properly
+
 2011-06-30:
 	gnocl::entry
    		o added options
