Imported gnocl-0.9.95-26-07-11.tar.bz2.
2011-07-26
    gnocl::text
        o new tag sub-commands
            names, raise, lower

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+2011-07-26
+    gnocl::text
+        o new tag sub-commands
+            names, raise, lower
+            
 2011-07-20
 	gnocl::text
 		o insert command now detects pango markup text
