Imported gnocl-0.9.96-22-08-12.tar.bz2.
2012-08:
	gnocl::text
		o new option
			-variable

	gnocl::label
		o new option
			-resizable

	gnocl::tree & gnocl::list

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
+2012-08:
+	gnocl::text
+		o new option
+			-variable
+			
+	gnocl::label
+		o new option
+			-resizable
+			
 2012-07: 
-	gnocl::tree
-	gnocl::list
+	gnocl::tree & gnocl::list
 		o columnConfigure
             added option: -widget (embed widget within column header)
             
