Imported gnocl-0.9.96-16-10-12.tar.bz2.
2012-10:
	gnocl::entry
	gnocl::text
		o new option
			-onDestroy

	gnocl::text
		cget -baseFont implemented
		resetUndo
	gnocl::button
		switched to the use of ButtonParams

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,15 @@
+2012-10:
+	gnocl::entry
+	gnocl::text
+		o new option
+			-onDestroy
+			
 2012-09:
+	gnocl::text
+		cget -baseFont implemented
+		resetUndo
+	gnocl::button
+		switched to the use of ButtonParams
 	gnocl::tree
 	gnocl::list
 		o new option
