Imported gnocl-0.9.96-27-01-13.tar.bz2.
		o new subcommands
	gnocl::winfo
		o new coomands
			hasGlobalFocus
			isTopLevelFocus

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,11 @@
 2013-01:
 	gnocl::winfo
-		o new subcommand
+		o new subcommands
 			exists
+	gnocl::winfo
+		o new coomands
+			hasGlobalFocus
+			isTopLevelFocus
 	gnocl::notebook
 		o new options			
     		-startWidget
