Imported gnocl-0.9.96-11-04-13.tar.bz2.
	gnocl::box
		o added commands, reorder, addStart
		o corrected bugs in addBegin command
		o new options
			-onButtonPress
			-onButtonRelease
			-tooltip

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,13 @@
 2013-04: 
+	gnocl::box
+		o added commands, reorder, addStart
+		o corrected bugs in addBegin command
 	gnocl::paned
 		o fixed bug with -onHandleMoved option
+		o new options
+			-onButtonPress
+			-onButtonRelease
+			-tooltip
 	gnocl::expander
 		o new option
 			-onActivate
