Imported gnocl-0.9.96-14-05-13.tar.bz2.
2013-05:
	gnocl::label
		o new options
			-foreground
			-background
	gnocl::text
		o new option
			-onDragEnd
			-onDragBegin

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+2013-05:
+	gnocl::label
+		o new options
+			-foreground
+			-background
+	gnocl::text
+		o new option
+			-onDragEnd
+			-onDragBegin
 2013-04: 
 	gnocl::button
 		o new option
