Imported gnocl-0.9.96-27-08-13.tar.bz2.
2013-08:
	gnocl::label
		o new options
			-onPopulatePopup, -onCopyClipboard, -onMoveCursor

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+2013-08:
+	gnocl::label
+		o new options
+			-onPopulatePopup, -onCopyClipboard, -onMoveCursor
 2013-07:
    new command
 		gnocl::commands
