Imported gnocl-0.9.96-31-08-13.tar.bz2.
	gnocl::notebook
		o new command
			cget
			make

--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,13 @@
 2013-08:
+	gnocl::notebook
+		o new command
+			cget
 	gnocl::label
 		o new commands
 			popup, getSelectionBounds
 		o new options
 			-onPopulatePopup, -onCopyClipboard, -onMoveCursor 
-			-onActivateCurrentLink, -onActivateLink
+			make 
 2013-07:
    new command
 		gnocl::commands
