Imported gnocl-0.9.96-07-09-13.tar.bz2.
2013-09:
	gnocl::text
		o added -length (chars) option to lorem command.
	new command
		o gnocl::pango, validate markup strings

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+2013-09: 
+	gnocl::text
+		o added -length (chars) option to lorem command.
+	new command
+		o gnocl::pango, validate markup strings
+		
 2013-08:
 	gnocl::notebook
 		o new command
