--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,13 @@
+2014-01:
+	gnocl::toolbar
+		o separated source code for the creation of toolbar items into
+			individual modules. 
+		o -onToggled functionality now working properly for relevant items.
+
 2013-11: 
+	gnocl::menu
+		o new command
+			attach
 	gnocl::tree and gnocl::list
 		o boolean columns
 			automatically toggle when clicked
