Imported gnocl-0.9.96-09-01-14.tar.bz2.
	gnocl::menu
		o added -position to the add command

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 2014-01:
+	gnocl::menu
+		o added -position to the add command
 	gnocl::toolbar
 		o separated source code for the creation of toolbar items into
 			individual modules. 
